# mirror-mergiraf

./: .clippy.toml  .gitattributes  .gitignore  .mailmap  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  build.rs  cliff.toml  flake.nix  members.yml  rustfmt.toml
.cargo/: config.toml
.forgejo/workflows/: Cross.toml  Dockerfile  ci.yml  nixDockerfile  release.yml  targets.txt
doc/: book.toml
doc/src/: SUMMARY.md  adding-a-language.md  architecture.md  conflicts.md  installation.md  introduction.md  languages.md  matching.dot  parsing.dot  related-work.md  supported_langs.txt  usage.md
doc/src/adding-a-language/: advanced-configuration.md  enabling-commutative-merging.md  testing.md
doc/src/asciinema/: crop.py  session.cast  solve.cast
doc/theme/: head.hbs
doc/theme/css/: general.css
examples/bash/working/env_cd_check/: Base.sh  Expected.sh  Left.sh  Right.sh
examples/bash/working/env_quote/: Base.sh  Expected.sh  Left.sh  Right.sh
examples/c/working/string_concatenation/: Base.c  Expected.c  Left.c  Right.c
examples/cmake/working/reformattting/: Base.cmake  Expected.cmake  Left.cmake  Right.cmake
examples/cmake/working/renaming_same_line/: Base.cmake  Expected.cmake  Left.cmake  Right.cmake
examples/cpp/failing/field_visibility_conflict/: Base.cc  ExpectedCurrently.cc  ExpectedIdeally.cc  Left.cc  Right.cc
examples/cpp/failing/lack_of_conflict/: Base.c  ExpectedIdeally.c  Left.c  Right.c
examples/cpp/failing/method_conflict_with_comments/: Base.cpp  Expected.cpp  ExpectedCurrently.cpp  Left.cpp
examples/cpp/failing/positional_argument_in_initializer_list/: Base.c  ExpectedCurrently.c  ExpectedIdeally.c
examples/cpp/working/field_conflict/: Base.c  Expected.c  Left.c  Right.c
examples/cpp/working/initializer_list/: Base.c  Expected.c  Left.c  Right.c
examples/cpp/working/json_in_cpp/: Base.cpp  Expected.cpp  Left.cpp  README  Right.cpp
examples/cpp/working/method_conflict/: Base.cpp  Expected.cpp  Left.cpp  Right.cpp
examples/cpp/working/method_conflict_same_arguments/: Expected.cpp  Left.cpp  Right.cpp
examples/cpp/working/positional_argument_in_initializer_list/: Left.c  Right.c
examples/cpp/working/unable_to_detect_disjoint_conditions/: Expected.c
examples/csharp/failing/methods_with_comments/: ExpectedCurrently.cs  README
examples/csharp/working/add_imports/: Base.cs  Expected.cs  Left.cs  Right.cs
examples/csharp/working/method_signatures/: Expected.cs  Left.cs  Right.cs
examples/csharp/working/methods_with_comments/: Base.cs  Expected.cs  Left.cs  Right.cs
examples/dart/working/add_imports/: Expected.dart  Left.dart  Right.dart
examples/dart/working/add_instance_variables/: Base.dart  Expected.dart  Left.dart  Right.dart
examples/dart/working/add_same_import/: Base.dart  Expected.dart  Left.dart
examples/dart/working/duplicate_type_declarations/: Base.dart  Expected.dart  Left.dart  Right.dart
examples/dart/working/enum_values/: Base.dart  Expected.dart  Left.dart  Right.dart
examples/devicetree/working/add_different_properties/: Base.dts  Expected.dts  Right.dts
examples/devicetree/working/insert_same_property_away_from_each_other/: Right.dts
examples/devicetree/working/insert_same_property_same_position/: Expected.dts  Right.dts
examples/devicetree/working/insert_same_property_values/: Expected.dts  Right.dts
examples/devicetree/working/non_conflicting_insertions/: Expected.dts  Right.dts
examples/elixir/working/method_arguments/: Base.ex  Expected.ex  Left.ex  Right.ex
examples/fortran/working/commutative_included_items/: Base.f90  Expected.f90  Left.f90  Right.f90
examples/fortran/working/commutative_use_statements/: Expected.f90  Left.f90  Right.f90
examples/fortran/working/commutative_variable_declarations/: Base.f90  Expected.f90  Left.f90  Right.f90
examples/fortran/working/signature_use_statement_different_modules/: Base.f90  Left.f90  Right.f90
examples/go.mod/working/duplicate_ignore_directives/: Left  README.md
examples/go.mod/working/exclude_directives/: Base  Expected  Left  Right
examples/go.mod/working/godebug_directives/: Base  Expected  Left  Right
examples/go.mod/working/ignore_directives/: Base  Left  Right
examples/go.mod/working/replace_directives/: Base  Expected  Left  Right
examples/go.mod/working/require_directives/: Base  Expected  Left  Right
examples/go.mod/working/retract_directives/: Base  Expected  Left  Right
examples/go.sum/working/checksums/: Base  Expected  Left  Right
examples/go/failing/duplicate_type_declarations/: ExpectedCurrently.go  ExpectedIdeally.go
examples/go/failing/field_with_trailing_comment/: ExpectedIdeally.go
examples/go/working/composite_literal/: Base.go  Expected.go  Left.go  Right.go
examples/go/working/duplicate_type_declarations/: Base.go  Left.go  Right.go
examples/go/working/field_with_trailing_comment/: Base.go  (+1 more)
examples/spork/: LICENSE
helpers/: benchmark.sh  diff_between.sh  diff_left.sh  diff_right.sh  generate_svg.sh  inspect.sh  run.sh  suite.sh  summarize_benchmark.py
mgf_dev/: Cargo.toml
mgf_dev/src/: lib.rs  main.rs  minimize.rs
src/: ast.rs  attempts.rs  bug_reporter.rs  changeset.rs  class_mapping.rs  git.rs  lang_profile.rs  lib.rs  line_based.rs  main.rs  matching.rs  merge.rs  merge_3dm.rs  merge_postprocessor.rs  merge_result.rs  merged_text.rs  merged_tree.rs  minimize.rs  multimap.rs  newline.rs  parsed_merge.rs  path_buf_ext.rs  pcs.rs  priority_list.rs  settings.rs  signature.rs  solve.rs  std_ext.rs  structured.rs  supported_langs.rs  test_utils.rs  tree.rs  tree_builder.rs  tree_matcher.rs  util.rs  utils.rs  visualizer.rs
src/ast/: bundle_comments.rs
src/merged_tree/: postprocess.rs  print.rs
src/snapshots/: mergiraf__supported_langs__test__children_of_commutative_parents_have_sigs.snap  mergiraf__visualizer__tests__matching.dot.snap
src/tree_matcher/: priority_list.rs
tests/: failing.rs  git_failure_missing_stage.rs  git_failure_not_conflict_state.rs  integration_tests.rs  misc.rs  solve_command.rs  timeout_support.rs  working.rs
tests/common/: mod.rs
(+758 files in other folders)
