[workspace]
resolver = "3"
members = ["mgf_dev"]

[workspace.dependencies]
clap = { version = "4.5.38", features = ["derive"] }
stderrlog = "0.6"
tempfile = "3"
typed-arena = "2"

[package]
name = "mergiraf"
version = "0.11.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://codeberg.org/mergiraf/mergiraf"
keywords = ["git", "tree-sitter", "merge-driver"]
categories = ["development-tools"]
homepage = "https://mergiraf.org/"
documentation = "https://mergiraf.org/"
description = "A syntax-aware merge driver for Git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc=">=1.1"

[dependencies]
tree-sitter = "0.25"
tree-sitter-ocaml = "0.24.2"
tree-sitter-rust-orchard = "0.10"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7.0"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-java = "0.23"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-html = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-xml = "0.7.0"
tree-sitter-go = "0.23.4"
tree-sitter-gomod-orchard = "0.4"
tree-sitter-dart = "0.0.4"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.23.6"
tree-sitter-php = "0.23"
tree-sitter-solidity = "1.2.11"
tree-sitter-lua = "0.2.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-elixir = "0.3"
tree-sitter-properties = "0.3.0"
tree-sitter-md = "0.3.2"
tree-sitter-hcl = "1.1.0"
tree-sitter-ini = "1.3.0"
tree-sitter-haskell = "0.23.1"
regex = "1.11.1"
itertools = "0.14.0"
tree-sitter-nix = "0.0.2"
typed-arena.workspace = true
tree-edit-distance = "0.4"
clap.workspace = true
stderrlog.workspace = true
log = "0.4"
rand = "0.9.1"
etcetera = "0.10.0"
zip = { version = "3.0.0", features = ["deflate"], default-features = false }
tree-sitter-scala = "0.23.4"
either = "1.15.0"
rustc-hash = "2.1.1"
diffy-imara = "0.3.2"
nu-ansi-term = "0.50.1"
oneshot = {version = "0.1.11", default-features = false, features = ["std"]}
tree-sitter-devicetree = "0.14.1"
tree-sitter-verilog = "1.0.3"

# for transitive dependencies that incorrectly specify minimal required versions of their dependencies
[target."cfg(any())".dependencies]
cc = ">=1.2.12" # required for cross-compiling to MacOS X

[dev-dependencies]
caplog = "0.3.0"
rstest = {version = "0.25.0", default-features = false}
tempfile.workspace = true

[profile.dev]
# to conform to Git's protocol for merge drivers, which requires
# a return code > 128 when an error occurs. This sets return code 134.
panic = "abort"

[profile.release]
panic = "abort"
strip = true
lto = true
debug = false

[profile.bench]
strip = false
debug = true

[lints.clippy]
case_sensitive_file_extension_comparisons = "warn"
flat_map_option = "warn"
default_trait_access = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
needless_pass_by_value = "warn"
semicolon_if_nothing_returned = "warn"
single_char_pattern = "warn"
single_match_else = "warn"
trivially_copy_pass_by_ref = "warn"
uninlined_format_args = "warn"
use_self = "warn"
redundant_closure_for_method_calls = "warn"
