[workspace]
resolver = "3"
members = ["mgf_dev"]

[workspace.dependencies]
clap = { version = "4.5.50", features = ["derive"] }
log = "0.4"
rand = "0.9.2"
stderrlog = "0.6"
typed-arena = "2"

[package]
name = "mergiraf"
version = "0.16.3"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://codeberg.org/mergiraf/mergiraf"
keywords = ["git", "tree-sitter", "merge-driver"]
categories = ["development-tools"]
homepage = "https://mergiraf.org/"
documentation = "https://mergiraf.org/"
description = "A syntax-aware merge driver for Git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc=">=1.1"

[dependencies]
tree-sitter = "0.25"
tree-sitter-ocaml = "0.24"
tree-sitter-rust-orchard = "0.14"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-java-orchard = "0.3"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-html = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-xml = "0.7"
tree-sitter-go = "0.25"
tree-sitter-gomod-orchard = "0.5"
tree-sitter-gosum-orchard = "0.3"
tree-sitter-dart-orchard = "0.3"
tree-sitter-typescript = "0.23"
tree-sitter-python-orchard = "0.4"
tree-sitter-php = "0.24"
tree-sitter-solidity = "1.2"
tree-sitter-lua = "0.2"
tree-sitter-ruby = "0.23"
tree-sitter-elixir = "0.3"
tree-sitter-properties = "0.3"
tree-sitter-md = "0.5"
tree-sitter-hcl = "1.1"
tree-sitter-ini = "1.3"
tree-sitter-haskell = "0.23"
tree-sitter-cmake = "0.7"
regex = "1.12"
itertools = "0.14"
tree-sitter-nix = "0.3"
typed-arena.workspace = true
clap.workspace = true
stderrlog.workspace = true
log.workspace = true
rand.workspace = true
tree-edit-distance = "0.4"
etcetera = "0.10"
# TODO: update to 7.* after https://github.com/zip-rs/zip2/issues/556 is resolved
zip = { version = "6.0", features = ["deflate"], default-features = false }
tree-sitter-scala = "0.24"
either = "1.15"
rustc-hash = "2.1"
diffy-imara = "0.3"
nu-ansi-term = "0.50"
oneshot = {version = "0.1", default-features = false, features = ["std"]}
tree-sitter-devicetree = "0.14"
tree-sitter-systemverilog = "0.2.1"
tree-sitter-make = "1.1"
tree-sitter-starlark = "1.3"
nonempty-collections = "1.1"
tempfile = {version = "3", optional = true}
thiserror = "2"
derive_more = { version = "2.1.1", features = ["eq"] }

# for transitive dependencies that incorrectly specify minimal required versions of their dependencies
[target."cfg(any())".dependencies]
cc = { version = ">=1.2.12", default-features = false, optional = true } # required for cross-compiling to MacOS X

[dev-dependencies]
caplog = "0.3"
rstest = {version = "0.26", default-features = false}
tempfile = "3"
insta = { version = "1.43", default-features = false, features = ["colors"] }

[features]
dev = ["dep:tempfile"]

[profile.dev]
# to conform to Git's protocol for merge drivers, which requires
# a return code > 128 when an error occurs. This sets return code 134.
panic = "abort"

# https://docs.rs/insta/1.43.2/insta/index.html#optional-faster-runs
[profile.dev.package]
insta = { opt-level = 3 }
similar = { opt-level = 3 }

[profile.release]
panic = "abort"
strip = true
lto = true
debug = false

[profile.bench]
strip = false
debug = true

[workspace.lints.clippy]
case_sensitive_file_extension_comparisons = "warn"
flat_map_option = "warn"
default_trait_access = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
needless_pass_by_value = "warn"
semicolon_if_nothing_returned = "warn"
single_char_pattern = "warn"
single_match_else = "warn"
trivially_copy_pass_by_ref = "warn"
uninlined_format_args = "warn"
use_self = "warn"
redundant_closure_for_method_calls = "warn"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }_{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
archive-suffix = ".tar.gz"

[package.metadata.binstall.overrides.x86_64-pc-windows-gnu]
pkg-fmt = "zip"
archive-suffix = ".zip"

# used for "deb" packaging with "cargo deb" (https://crates.io/crates/cargo-deb)
[package.metadata.deb]
assets = [
    "$auto",
    { source = "doc/book/*", dest = "usr/share/doc/mergiraf/book", mode = "644"},
]
