[package]
name = "mgf_dev"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap.workspace = true
log.workspace = true
mergiraf = {path = "..", features = ["dev"]}
stderrlog.workspace = true
typed-arena.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
